--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,12 @@
       name="description"
       content="Web site created using create-react-app"
     />
-
     <title>Web-Shop</title>
+
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
